--- a/features/cleaning-and-review.mdx
+++ b/features/cleaning-and-review.mdx
@@ -42,9 +42,9 @@ You can customize the following key quality checks by setting thresholds that de
 
 - **Time Score (TS)**: <br/> Set a threshold for the Time Score and number of data points to filter out low-quality responses
 
-- **Grid-Question Score (GQS)**: <br/> Define a threshold for the Grid-Question Score and set a minimum number of items to filter out low-quality responses.
+- **Grid-Question Score (GQS)**: <br/> Define a threshold for the Grid-Question Score and set a minimum number of data points to filter out low-quality responses.
 
-- **Coherence Score (CHS)**: <br/> Set a threshold for the Coherence Score to filter out low-quality responses.
+- **Coherence Score (CHS)**: <br/> Set a threshold for the Coherence Score and set a minimum number of data points to filter out low-quality responses.
 
 - **Open-Ended Response Categories**: <br/> Respondents are flagged for exclusion if their open-ended responses meet specified criteria. Each category can require a minimum number of flagged data points for exclusion.
 
