--- a/api-reference/intro/introduction.mdx
+++ b/api-reference/intro/introduction.mdx
@@ -22,7 +22,7 @@ The ReDem API supports two main integration use cases, allowing you to choose th
     Get instant feedback on survey responses and data quality scores directly in your application.
   </Card>
 
-  <Card title="For Panels" icon="screwdriver-wrench" href="/api-reference/intro/for-survey-tools">
+  <Card title="For Survey Tools" icon="screwdriver-wrench" href="/api-reference/intro/for-survey-tools">
     Automatically synchronize data quality scores with your systems at regular intervals for continuous analysis.
   </Card>
 </CardGroup>
