Documentation edits made through Mintlify web editor

--- a/miscellaneous/questionnaire-criteria.mdx
+++ b/miscellaneous/questionnaire-criteria.mdx
@@ -19,6 +19,8 @@ Open-ended questions are highly effective for ensuring data quality. As describe
 
 * **Strategic Placement:** For thorough quality assessment, it is recommended to include at least two open-ended questions in a questionnaire, strategically placed, such as one at the beginning and one at the end. In longer surveys, a respondent may momentarily lose focus and provide a nonsensical answer, but if this occurs more than once, it significantly increases the likelihood of poor data quality. This distribution also helps evaluate participant engagement throughout the survey. Additionally, analyzing duplicates or partial duplicates within a single interview, as well as across multiple interviews, can further aid in quality assessment.
 
+We’ve built a [ChatGPT OES Question Master](https://chatgpt.com/g/g-3YkEFGt1h-redem-oes-question-master) that generates open-ended survey questions based on a given topic, which can be used for ReDem's Open Ended Score (OES) quality check.
+
 ### Grid-Questions
 
 Grid questions provide a useful tool for in-survey quality checks by allowing the analysis of participant click behavior for signs of inattentiveness or fraud. As described in detail below **we recommend to include at least one grid question with at least seven items** (the more, the better) and in each case 4 or more attribute values (e.g., a Likert scale).
