-Update the for survey page linking both get respondent nad get all respondents

--- a/api-reference/intro/for-survey-tools.mdx
+++ b/api-reference/intro/for-survey-tools.mdx
@@ -100,8 +100,8 @@ iconType: "regular"
   <Step title="Synchronize respondent evaluations">
     <p>Since an asynchronous response approach is recommended, you can synchronize respondent evaluations from ReDem into your survey tool at any time.</p>
 
-    <p> To streamline the process, you can set up an automated job that performs the synchronization on a daily basis, ensuring your data remains up-to-date without requiring manual intervention. </p>
+    <p> To streamline the process, you can set up an automated job that performs the synchronization on a regular basis, ensuring your data remains up-to-date without requiring manual intervention. </p>
 
-    <p>To do this, you can use the [Get All Respondents](/api-reference/endpoint/getAllRespondents) endpoint.</p>
+    <p>To do this, you can use the [Get Respondent](/api-reference/endpoint/getRespondent) endpoint or the [Get All Respondents](/api-reference/endpoint/getAllRespondents) endpoint.</p>
   </Step>
 </Steps>
