Documentation edits made through Mintlify web editor

--- a/quality-checks/open-ended-score.mdx
+++ b/quality-checks/open-ended-score.mdx
@@ -67,7 +67,7 @@ Our system automatically detects responses copied and pasted into survey text fi
 
 ### `  Fake Answers  `
 
-We analyze response structures to ensure they follow a plausible pattern, helping to detect thematically relevant but externally sourced answers, such as those from Wikipedia. Responses identified as "**Fake Answers**" are assigned a score of 0.
+We analyze response structures to ensure they follow a plausible pattern, helping to detect thematically relevant but externally sourced answers, such as those from Wikipedia or AI chatbots like ChatGPD. Responses identified as "**Fake Answers**" are assigned a score of 0.
 
 ### `  Bad Language  `
 
