--- a/quality-checks/redem-score.mdx
+++ b/quality-checks/redem-score.mdx
@@ -9,7 +9,7 @@ iconType: "regular"
 
 At the core of ReDem lies a 360-degree approach, enabling us to analyze interviews from every possible perspective. Each interview undergoes rigorous quality checks, culminating in the ReDem Score (R-Score). This score integrates all relevant quality criteria, offering a transparent and objective assessment of data quality in survey responses. With ReDem, every questionnaire becomes a sophisticated web of safeguards, making it nearly impossible for fraudsters to go undetected.
 
-<img classname="hidden dark:block" src="/images/Quality-Checks-Dark.png" />
+<img classname="hidden dark:block" src="/images/Quality-Checks.png" />
 
 ### The four dimensions of the ReDem Score:
 
