Documentation edits made through Mintlify web editor

--- a/miscellaneous/redem-credits.mdx
+++ b/miscellaneous/redem-credits.mdx
@@ -15,7 +15,7 @@ You can purchase credits through annual subscription plans. To learn more about 
 
 Analyzing data with ReDem requires ReDem credits, with the amount depending on the quality checks selected for each respondent.
 
-The minimum cost is 4 credits per respondent, with additional credits required based on the quality parameters you choose. This flexible approach allows you to balance costs while achieving your desired level of data quality!
+The **minimum cost is 5 credits per respondent**, with additional credits required based on the quality parameters you choose. This flexible approach allows you to balance costs while achieving your desired level of data quality!
 
 ## How Credit Calculation Works?
 
