Documentation edits made through Mintlify web editor

--- a/miscellaneous/redem-credits.mdx
+++ b/miscellaneous/redem-credits.mdx
@@ -34,7 +34,7 @@ The following list offers a clear overview of how credits are calculated based o
   <tbody>
     <tr>
       <td style={{border: '1px solid #e3e3e3', padding: '10px'}}>Open-Ended-Score (OES)</td>
-      <td style={{border: '1px solid #e3e3e3', padding: '10px'}}>3 (for first question)</td>
+      <td style={{border: '1px solid #e3e3e3', padding: '10px'}}>3 (for the first question)</td>
       <td style={{border: '1px solid #e3e3e3', padding: '10px'}}>0.5 (for each additional question)</td>
       <td style={{border: '1px solid #e3e3e3', padding: '10px'}}>7.5</td>
     </tr>
@@ -48,7 +48,7 @@ The following list offers a clear overview of how credits are calculated based o
 
     <tr>
       <td style={{border: '1px solid #e3e3e3', padding: '10px'}}>Coherence-Score (CHS)</td>
-      <td style={{border: '1px solid #e3e3e3', padding: '10px'}}>4 (for first 100 questions)</td>
+      <td style={{border: '1px solid #e3e3e3', padding: '10px'}}>4 (for the first 100 questions)</td>
       <td style={{border: '1px solid #e3e3e3', padding: '10px'}}>0.03 (for each additional question)</td>
       <td style={{border: '1px solid #e3e3e3', padding: '10px'}}>-</td>
     </tr>
@@ -68,7 +68,7 @@ The following list offers a clear overview of how credits are calculated based o
 
 * **Time Score (TS):** The maximum cost is **1 credit per respondent**, regardless of the number of time-related data points included.
 
-* **Coherence Score (CHS):** A maximum of **100 data questions** are included in the base calculation, costing **4 credits** per respondent. For additional question beyond 100, each incurs an extra cost of **0.03 credits**.
+* **Coherence Score (CHS):** A maximum of **100 questions** are included in the base calculation, costing **4 credits** per respondent. For additional question beyond 100, each incurs an extra cost of **0.03 credits**.
 
 * **No Credits for Empty Answers or Missing Values:** Credits are only applied to valid, present data points. No credits are charged for empty responses or missing values.
 
