Documentation edits made through Mintlify web editor

--- a/miscellaneous/redem-credits.mdx
+++ b/miscellaneous/redem-credits.mdx
@@ -7,19 +7,19 @@ iconType: "regular"
 
 ## What are ReDem Credits?
 
-ReDem Credits are the currency used to pay for quality checks on your survey data.
+ReDem Credits serve as the currency for conducting quality checks on your survey data.
 
-You can purchase credits through annual subscription plans. To learn more about available plans or to sign up [click here](https://redem.io/pricing/).
+You can purchase credits through annual subscription plans. To explore available options or sign up, [click here](https://redem.io/pricing/).
 
 ## Basics of ReDem Credits
 
-Analyzing data with ReDem requires ReDem credits, with the amount depending on the quality checks selected for each respondent.
+Analyzing data with ReDem requires ReDem Credits, with the number of credits needed varying based on the quality checks selected for each respondent.
 
-The **minimum cost is 5 credits per respondent**, with additional credits required based on the quality parameters you choose. This flexible approach allows you to balance costs while achieving your desired level of data quality!
+The **minimum cost is 5 credits per respondent**, with additional credits required depending on the quality parameters you select. This flexible approach enables you to balance costs while ensuring your desired level of data quality.
 
 ## How Credit Calculation Works?
 
-The following list offers a clear overview of how credits are calculated based on Quality Scores, with all calculations applied on a per-respondent basis:
+The following list provides a clear overview of how credits are calculated based on Quality Scores, with all calculations applied on a per-respondent basis:
 
 <table>
   <thead>
@@ -36,7 +36,7 @@ The following list offers a clear overview of how credits are calculated based o
       <td style={{border: '1px solid #e3e3e3', padding: '10px'}}>Open-Ended-Score (OES)</td>
       <td style={{border: '1px solid #e3e3e3', padding: '10px'}}>3 (for the first question)</td>
       <td style={{border: '1px solid #e3e3e3', padding: '10px'}}>0.5 (for each additional question)</td>
-      <td style={{border: '1px solid #e3e3e3', padding: '10px'}}>7.5</td>
+      <td style={{border: '1px solid #e3e3e3', padding: '10px'}}>-</td>
     </tr>
 
     <tr>
@@ -64,20 +64,20 @@ The following list offers a clear overview of how credits are calculated based o
 
 ### 💡Important Credit Rules
 
-* **Grid-Question Score (GQS):** The maximum charge is capped at **2 credits per respondent**. Each grid-question item **costs 0.05 credits**, but even if a respondent has numerous items, the total cost for GQS will not exceed 2 credits.
+* **Grid-Question Score (GQS):** The cost for each grid-question item is **0.05 credits**, but the total charge for GQS per respondent is capped at **2 credits**, regardless of the number of items they have.
 
-* **Time Score (TS):** The maximum cost is **1 credit per respondent**, regardless of the number of time-related data points included.
+* **Time Score (TS):* *The maximum cost is **1 credit per respondent**, regardless of the number of time-related data points included.
 
-* **Coherence Score (CHS):** A maximum of **100 questions** are included in the base calculation, costing **4 credits** per respondent. For additional question beyond 100, each incurs an extra cost of **0.03 credits**.
+* **Coherence Score (CHS): The base calculation includes a maximum of **100 questions**, costing **4 credits** per respondent. For each additional question beyond 100, an extra cost of **0.03 credits** applies.
 
-* **No Credits for Empty Answers or Missing Values:** Credits are only applied to valid, present data points. No credits are charged for empty responses or missing values.
+* **No Credits for Empty Answers or Missing Values:** Credits are applied only to valid, present data points. No credits are charged for empty responses or missing values.
 
-* **Total Credit Calculation for Surveys**: The total cost of a survey is calculated by adding up the credit costs for all respondents. Each respondent's credit usage is determined by their individual data points and the quality checks applied.
+* **Total Credit Calculation for Surveys**: The total cost of a survey is calculated by summing the credit costs for all respondents. Each respondent's credit usage is based on their individual data points and the quality checks applied.
 
 <br />
 
 ### Sample Credit Calculation
 
-Here’s an example of how credits are calculated for a single respondent:
+Here’s an example of how credits are calculated for an individual respondent:
 
 <img classname="block dark:hidden" src="/images/Credit-Calculation-Example.png" />
