Documentation edits made through Mintlify web editor

--- a/miscellaneous/redem-credits.mdx
+++ b/miscellaneous/redem-credits.mdx
@@ -66,9 +66,9 @@ The following list provides a clear overview of how credits are calculated based
 
 * **Grid-Question Score (GQS):** The cost for each grid-question item is **0.05 credits**, but the total charge for GQS per respondent is capped at **2 credits**, regardless of the number of items they have.
 
-* **Time Score (TS):* *The maximum cost is **1 credit per respondent**, regardless of the number of time-related data points included.
+* **Time Score (TS):** The maximum cost is **1 credit per respondent**, regardless of the number of time-related data points included.
 
-* **Coherence Score (CHS): The base calculation includes a maximum of **100 questions**, costing **4 credits** per respondent. For each additional question beyond 100, an extra cost of **0.03 credits** applies.
+* **Coherence Score (CHS):** The base calculation includes a maximum of **100 questions**, costing **4 credits** per respondent. For each additional question beyond 100, an extra cost of **0.03 credits** applies.
 
 * **No Credits for Empty Answers or Missing Values:** Credits are applied only to valid, present data points. No credits are charged for empty responses or missing values.
 
