Documentation edits made through Mintlify web editor

--- a/api-reference/api-specifications/api-keys.mdx
+++ b/api-reference/api-specifications/api-keys.mdx
@@ -28,7 +28,7 @@ You can create an API key by following these steps:
   <Step title="Go and connect with ReDem 🚀">
     <p>Great! Now that you have your API key, you can use it as a bearer token to securely send or retrieve data from ReDem in any API request.</p>
     ```plainApiKey_xxx
-        Authorization: Bearer your_api_key_xxx
+        api-key: your_api_key_xxx
     ```
   </Step>
 </Steps>
