Documentation edits made through Mintlify web editor

--- a/api-reference/api-specifications/api-keys.mdx
+++ b/api-reference/api-specifications/api-keys.mdx
@@ -26,7 +26,7 @@ You can create an API key by following these steps:
     Once you’ve made an API key you should copy it and put it somewhere safe, as you will not be able to see it again once you navigate away.
   </Step>
   <Step title="Go and connect with ReDem 🚀">
-    <p>Great! Now that you have your API key, you can use it as a bearer token to securely send or retrieve data from ReDem in any API request.</p>
+    <p>Great! Now that you have your API key, you can use it to securely send or retrieve data from ReDem in any API request.</p>
     ```plainApiKey_xxx
         api-key: your_api_key_xxx
     ```
