Update endpoint paths for respondent API - Enable payground for API

--- a/api-reference/endpoint/estimateRespondent.mdx
+++ b/api-reference/endpoint/estimateRespondent.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Estimate Respondent Credits'
-openapi: 'GET /respondent/estimate'
+openapi: 'GET /respondent/estimation'
 ---
 
 In case if you want to estimate the number of credits required to add a respondent, you can use this endpoint.
