--- a/api-reference/endpoint/getAllRespondents.mdx
+++ b/api-reference/endpoint/getAllRespondents.mdx
@@ -1,4 +1,4 @@
 ---
 title: 'Get All Respondents'
-openapi: 'GET /respondent/result/{surveyName}'
+openapi: 'GET /respondent/getAllRespondents/{surveyName}'
 ---
