- Update ReDem Credits description and remove pricing link
- Add Beta Text into CHS

--- a/miscellaneous/redem-credits.mdx
+++ b/miscellaneous/redem-credits.mdx
@@ -7,9 +7,7 @@ iconType: "regular"
 
 ## What are ReDem Credits?
 
-ReDem Credits serve as the currency for conducting quality checks on your survey data.
-
-You can purchase credits through annual subscription plans. To explore available options or sign up, [click here](https://redem.io/pricing/).
+ReDem Credits serve as the currency for conducting quality checks on your survey data. You can purchase credits through annual subscription plans.
 
 ## Basics of ReDem Credits
 
