--- a/quality-checks/coherence-score.mdx
+++ b/quality-checks/coherence-score.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Coherence Score"
+title: "Coherence Score (Beta)"
 description: " Discover how the Coherence Score uncovers professional fraud that often goes undetected"
 icon: "grid-2-plus"
 iconType: "regular"
