Documentation edits made through Mintlify web editor

--- a/api-reference/intro/introduction.mdx
+++ b/api-reference/intro/introduction.mdx
@@ -29,7 +29,7 @@ The ReDem API supports two main integration use cases, allowing you to choose th
 
 ## Base URL
 
-ReDem’s API is built on REST principles following the [OpenAPI](https://www.openapis.org/) standard as much as possible.  For your data’s security, it operates exclusively over HTTPS, so you can trust that all interactions are encrypted. Unencrypted HTTP connections aren’t supported, keeping your data safe by default.
+ReDem’s API is built on REST principles following the [OpenAPI](https://www.openapis.org/) standard as much as possible.  To ensure data security, it operates exclusively over HTTPS, encrypting all interactions. Unencrypted HTTP connections are not supported, safeguarding your data by default.
 
 The Base URL for all API endpoints is:
 
